--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@
                 <marquee id="marquee-two" class="marquee-two" behavior="scroll" direction="left" scrolldelay="100">
                     <div onmouseover= "document.getElementById('marquee-two').stop();"
                     onmouseout="document.getElementById('marquee-two').start();">
-                        Phải đủ dũng cảm và nghị lực đối diện với những nốt trầm nhất trong bản nhạc <br>
-                        khi đó, ta mới có những phút giây thăng hoa cho những nốt bổng tiếp theo. 
+                        Phải đủ dũng cảm và nghị lực đối diện với những nốt trầm nhất trong bản nhạc. Khi đó, ta mới có những phút giây thăng hoa cho những nốt bổng tiếp theo. 
                     </div>
 
                 </marquee>
