--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <div class="event-section_des--band">
                         Thùy Dương & Wasabi Band
                     </div>
-                    <div class="event-section_des--time">Friday 8 June 2021</div>
+                    <div class="event-section_des--time">Friday 8 July 2021</div>
                     <div class="event-section_des--address">Bán đảo Sơn Trà, Đà Nẵng</div>
                     <div class="event-section_des--info">
                         Những giai điệu tuyệt vời vẫn đang chờ đón bạn!</div>
@@ -105,8 +105,8 @@
                     <div class="event-section_des--band">
                         Thùy Dương & Wasabi Band
                     </div>
-                    <div class="event-section_des--time">Friday 8 June 2021</div>
-                    <div class="event-section_des--address">Bán đảo Sơn Trà, Đà Nẵng</div>
+                    <div class="event-section_des--time">Saturday 10 August 2021</div>
+                    <div class="event-section_des--address">Lô 1D Võ Nguyên Giáp, Sơn Trà, Đà Nẵng</div>
                     <div class="event-section_des--info">
                         Những giai điệu tuyệt vời vẫn đang chờ đón bạn!</div>
                     <div>
@@ -128,8 +128,8 @@
                     <div class="event-section_des--band">
                         Thùy Dương & Wasabi Band
                     </div>
-                    <div class="event-section_des--time">Friday 8 June 2021</div>
-                    <div class="event-section_des--address">Bán đảo Sơn Trà, Đà Nẵng</div>
+                    <div class="event-section_des--time">Sunday 28 August 2021</div>
+                    <div class="event-section_des--address">Hòa Ninh, Hòa Vang, Đà Nẵng.</div>
                     <div class="event-section_des--info">
                         Những giai điệu tuyệt vời vẫn đang chờ đón bạn!</div>
                     <div>
