--- a/index.html
+++ b/index.html
@@ -71,6 +71,29 @@
 
 
             </div>
+            <div class="introduce_violin">
+                <div class="intro_heading">
+                    Những điều thú về về violin:
+                </div>
+                <p>
+                    <p>
+                    <span>Nguồn gốc của đàn violin:</span> Đàn dây đã xuất hiện từ rất lâu, cho tới nay chưa một ai biết chính xác nguồn gốc và thời gian xuất hiện của đàn dây. Dựa trên các tài liệu lịch sử thì các nhà nghiên cứu cho rằng xuất xứ của đàn dây là Ấn Độ và nó ra đời vào khoảng những thế kỷ đầu sau Công nguyên. Ngay cả trong thời Hy Lạp cổ đại cũng chưa biết tới đàn dây, mặc dù nước này đã có một nền âm nhạc khá phát triển. Đàn viol xuất hiện trước violon, có nhiều cỡ to nhỏ khác nhau và được chơi theo 2 cách: Hoặc là kẹp giữa 2 đầu gối như cello, hoặc là đặt trên đầu gối. Ngoài ra còn có một số loại viol , khi chơi được đặt lên vai như đàn violon hiện nay. <br>
+
+                    </p>
+                    <p>
+                    <span>Cha đẻ của đàn violin:</span> Bertolotti, Maggini và những hoc trò của họ đã chế tạo được những cây đàn violon ngày nay.<br>
+
+                    </p>
+                    <p>
+                    <span>Giá trị của đàn violin:</span> Đàn violon giống như giọng nói con người, phải thể hiện tất cả những cảm xúc của con người. Những chiếc đàn violon danh hư bất truyền mà các nghệ nhân Ý để lại đã cho chúng ta thấy tài năng xuất chúng của họ. Dưới bàn tay của hộ chiếc đàn violon đã đạt tới đỉnh cao của sự hoàn thiện và cái đẹp tận mỹ. Ngoài Amati còn có những nghệ nhân Ý khác như Stradivari, Guarneri, nhưngc người đã cống hiến cho nhân loại những cây đàn violon lịch sử, mà giá trị có chiếc đã đạt tới 10 triệu đôla Mỹ. <br>
+
+                    </p>
+                    <p>
+                        <span>Cây vĩ cầm huyền thoại</span> của nhạc trưởng tàu Titanic được định giá 30 tỉ. 
+                    Cây vĩ cầm mà nhạc trưởng tàu Titanic chơi khi con chìm dần dưới những lớp sóng lạnh của biển khơi vừa được bán với giá kỷ lục gần 1,5 triệu USD. Cây đàn là do vị hôn thê của ông trao tặng – bà Maria Robinson như một món quà đính ước giữa họ. Trên miếng bạc gắn ở thân đàn có khắc dòng chữ: “Dành tặng anh Wallace nhân ngày đính hôn của chúng mình. Em Maria.” Một điều thú vị là nhóm nghiên cứu phải mất 7 năm để thu thập đầy đủ bằng chứng để chứng minh cây đàn này là của nhạc trưởng tàu Titanic. Dù sao thì bây giờ nó mọi công sức cũng đã được đền đáp xứng đáng và cây vĩ cầm này sẽ mãi là vật chứng hùng hồn cho con tàu Titanic huyền thoại.
+                    </p>
+                </p>
+            </div>
         </div>
         <div id="tour_event" class="tour_event">
             <div class="tour_event-section">
@@ -372,6 +395,22 @@
                     </div>
                 </div>
             </div>
+
+            <div class="benefit_violin">
+                <div class="benefit_heading">Lợi ích khi học đàn violin:</div>
+                <p>
+                    <p>
+                        Không chỉ học chơi đàn violin mà với bất kỳ nhạc cụ nào cũng sẽ đem lại nhiều lợi ích, những lợi ích này có thể là những lợi ích về mặt tinh thần, vật chất xã hội song để có thể đề cập những lọi ích khi học đàn violin là điều không thể, vì thế chúng tôi sẽ giúp bạn tìm hiểu những lợi ích đó: <br>
+                    </p>
+                    <p>
+                        <span>Tăng cường các kỹ năng học tập:</span> Học loại đàn này sẽ giúp bạn nâng coa được thành tích học tập, bởi khi chơi đàn bạn sẽ phải kết hợp nhiều hoạt động khác nhau như sự chú ý, tập trung, phân tích, tư duy, năng lực, tài năng,… những hoạt động này khi thường xuyên rèn luyện sẽ được cải thiện qua thời gian từ đó giúp bạn có được một kết quả cao hơn trong học tập. <br>
+                    </p>
+                    <p>
+                        <span>Tăng kỹ năng phối hợp hoạt động:</span> để có thể chơi violin, bạn phải có sự kết hợp khéo léo của 2 bàn tay, đặc biệt là bàn tay trái phải chuyển động khá nhiều khi điều khiển cây vĩ. Chính vì vậy các hoạt động cũng theo đó mà phối hợp nhịp nhàng và gắn kết với nhau hơn. <br>
+                    </p>
+                </p>
+            </div>
+
         </div>
 
         <!-- nav method support and help-contact -->
