--- a/index.html
+++ b/index.html
@@ -403,10 +403,10 @@
                         Không chỉ học chơi đàn violin mà với bất kỳ nhạc cụ nào cũng sẽ đem lại nhiều lợi ích, những lợi ích này có thể là những lợi ích về mặt tinh thần, vật chất xã hội song để có thể đề cập những lọi ích khi học đàn violin là điều không thể, vì thế chúng tôi sẽ giúp bạn tìm hiểu những lợi ích đó: <br>
                     </p>
                     <p>
-                        <span>Tăng cường các kỹ năng học tập:</span> Học loại đàn này sẽ giúp bạn nâng coa được thành tích học tập, bởi khi chơi đàn bạn sẽ phải kết hợp nhiều hoạt động khác nhau như sự chú ý, tập trung, phân tích, tư duy, năng lực, tài năng,… những hoạt động này khi thường xuyên rèn luyện sẽ được cải thiện qua thời gian từ đó giúp bạn có được một kết quả cao hơn trong học tập. <br>
+                        <span>Tăng cường các kỹ năng học tập:</span> Học loại đàn này sẽ giúp bạn nâng cao được thành tích học tập, bởi khi chơi đàn bạn sẽ phải kết hợp nhiều hoạt động khác nhau như sự chú ý, tập trung, phân tích, tư duy, năng lực, tài năng,… những hoạt động này khi thường xuyên rèn luyện sẽ được cải thiện qua thời gian từ đó giúp bạn có được một kết quả cao hơn trong học tập. <br>
                     </p>
                     <p>
-                        <span>Tăng kỹ năng phối hợp hoạt động:</span> để có thể chơi violin, bạn phải có sự kết hợp khéo léo của 2 bàn tay, đặc biệt là bàn tay trái phải chuyển động khá nhiều khi điều khiển cây vĩ. Chính vì vậy các hoạt động cũng theo đó mà phối hợp nhịp nhàng và gắn kết với nhau hơn. <br>
+                        <span>Tăng kỹ năng phối hợp hoạt động:</span> Để có thể chơi violin, bạn phải có sự kết hợp khéo léo của 2 bàn tay, đặc biệt là bàn tay trái phải chuyển động khá nhiều khi điều khiển cây vĩ. Chính vì vậy các hoạt động cũng theo đó mà phối hợp nhịp nhàng và gắn kết với nhau hơn. <br>
                     </p>
                 </p>
             </div>
@@ -744,7 +744,7 @@
             
                         </div>
 
-                        <div class="form-group support_form-title">
+                        <div class="form-group support_form-content">
                             <label for="content" class="form-label">Nội dung</label>
                             <textarea class="form-control form_content" name="content" id="content" cols="60" rows="5" placeholder="Nội dung tin nhắn"></textarea>
                             <span class="form-message"></span>
