--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <div class="event-section_des--info">
                         Những giai điệu tuyệt vời vẫn đang chờ đón bạn!</div>
                     <div>
-                        <input type="button" class="btn event-section_btn" onfocus="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Đặt vé">
+                        <input type="button" class="btn event-section_btn" onclick="ShowMethodSupport()" onfocus="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Đặt vé">
                     </div>
                 </div>
                 <div class="tour_event-img">
@@ -134,7 +134,7 @@
                     <div class="event-section_des--info">
                         Những giai điệu tuyệt vời vẫn đang chờ đón bạn!</div>
                     <div>
-                        <input type="button" class="btn event-section_btn" onfocus="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Đặt vé">
+                        <input type="button" class="btn event-section_btn" onclick="ShowMethodSupport()" onfocus="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Đặt vé">
                     </div>
                 </div>
                 <div class="tour_event-img">
@@ -157,7 +157,7 @@
                     <div class="event-section_des--info">
                         Những giai điệu tuyệt vời vẫn đang chờ đón bạn!</div>
                     <div>
-                        <input type="button" class="btn event-section_btn" onfocus="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Đặt vé">
+                        <input type="button" class="btn event-section_btn" onclick="ShowMethodSupport()" onfocus="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Đặt vé">
                     </div>
                 </div>
                 <div class="tour_event-img">
@@ -449,7 +449,7 @@
                         </p>
                     </div>
                     <div>
-                    <input type="button" class="btn buy-product_btn" onfocus="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
+                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()" onfocus="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
 
                     </div>
 
@@ -477,7 +477,7 @@
 
                         </p>
                     </div>
-                    <input type="button" class="btn buy-product_btn" onfocus="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
+                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()" onfocus="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
 
 
                 </div>
@@ -505,7 +505,7 @@
 
                         </p>
                     </div>
-                    <input type="button" class="btn buy-product_btn" onfocus="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
+                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()" onfocus="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
 
 
                 </div>
@@ -533,7 +533,7 @@
 
                         </p>
                     </div>
-                    <input type="button" class="btn buy-product_btn" onfocus="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
+                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()" onfocus="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
 
 
                 </div>
@@ -561,7 +561,7 @@
 
                         </p>
                     </div>
-                    <input type="button" class="btn buy-product_btn" onfocus="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
+                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()" onfocus="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
 
 
                 </div>
@@ -589,7 +589,7 @@
 
                         </p>
                     </div>
-                    <input type="button" class="btn buy-product_btn" onfocus="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
+                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()" onfocus="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
 
 
                 </div>
@@ -617,7 +617,7 @@
 
                         </p>
                     </div>
-                    <input type="button" class="btn buy-product_btn" onfocus="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
+                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()" onfocus="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
 
 
                 </div>
@@ -645,7 +645,7 @@
 
                         </p>
                     </div>
-                    <input type="button" class="btn buy-product_btn" onfocus="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
+                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()" onfocus="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
 
 
                 </div>
@@ -673,7 +673,7 @@
 
                         </p>
                     </div>
-                    <input type="button" class="btn buy-product_btn" onfocus="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
+                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()" onfocus="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
 
 
                 </div>
@@ -701,7 +701,7 @@
 
                         </p>
                     </div>
-                    <input type="button" class="btn buy-product_btn" onfocus="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
+                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()" onfocus="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
 
 
                 </div>
