--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <div class="event-section_des--info">
                         Những giai điệu tuyệt vời vẫn đang chờ đón bạn!</div>
                     <div>
-                        <input type="button" class="btn event-section_btn" onclick="ShowMethodSupport()" onfocus="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Đặt vé">
+                        <input type="button" class="btn event-section_btn" onclick="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Đặt vé">
                     </div>
                 </div>
                 <div class="tour_event-img">
@@ -134,7 +134,7 @@
                     <div class="event-section_des--info">
                         Những giai điệu tuyệt vời vẫn đang chờ đón bạn!</div>
                     <div>
-                        <input type="button" class="btn event-section_btn" onclick="ShowMethodSupport()" onfocus="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Đặt vé">
+                        <input type="button" class="btn event-section_btn" onclick="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Đặt vé">
                     </div>
                 </div>
                 <div class="tour_event-img">
@@ -157,7 +157,7 @@
                     <div class="event-section_des--info">
                         Những giai điệu tuyệt vời vẫn đang chờ đón bạn!</div>
                     <div>
-                        <input type="button" class="btn event-section_btn" onclick="ShowMethodSupport()" onfocus="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Đặt vé">
+                        <input type="button" class="btn event-section_btn" onclick="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Đặt vé">
                     </div>
                 </div>
                 <div class="tour_event-img">
@@ -415,6 +415,9 @@
 
         <!-- nav method support and help-contact -->
         <div id="methodSupport" class="methodSupport">
+            <div onclick="HiddenMethodSupport()" class="closeMethorSupport">
+                <i class="btn_close fas fa-window-close"></i>
+            </div>
             <div class="messenger">
                 <button ><i class="fab fa-facebook-messenger"><span> Messenger</span></i></button>
             </div>
@@ -449,7 +452,7 @@
                         </p>
                     </div>
                     <div>
-                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()" onfocus="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
+                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
 
                     </div>
 
@@ -477,7 +480,7 @@
 
                         </p>
                     </div>
-                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()" onfocus="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
+                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
 
 
                 </div>
@@ -505,7 +508,7 @@
 
                         </p>
                     </div>
-                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()" onfocus="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
+                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
 
 
                 </div>
@@ -533,7 +536,7 @@
 
                         </p>
                     </div>
-                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()" onfocus="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
+                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
 
 
                 </div>
@@ -561,7 +564,7 @@
 
                         </p>
                     </div>
-                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()" onfocus="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
+                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
 
 
                 </div>
@@ -589,7 +592,7 @@
 
                         </p>
                     </div>
-                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()" onfocus="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
+                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
 
 
                 </div>
@@ -617,7 +620,7 @@
 
                         </p>
                     </div>
-                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()" onfocus="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
+                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
 
 
                 </div>
@@ -645,7 +648,7 @@
 
                         </p>
                     </div>
-                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()" onfocus="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
+                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
 
 
                 </div>
@@ -673,7 +676,7 @@
 
                         </p>
                     </div>
-                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()" onfocus="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
+                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
 
 
                 </div>
@@ -701,7 +704,7 @@
 
                         </p>
                     </div>
-                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()" onfocus="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
+                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
 
 
                 </div>
