--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
         </div>
         <div class="app_navbar">
-            <ul class="navbar_menu">
-                <li id="introduce" class="menu_item-link--active menu_item">
-                    <a href="#" class=" menu_item-link ">
+            <ul id="navbar_menu" class="navbar_menu">
+                <li id="introduce" class="menu_item">
+                    <a href="#" class="menu_item-link menu_item-link--active">
                         Giới thiệu
                     </a>
                 </li>
@@ -110,7 +110,7 @@
                     <div class="event-section_des--info">
                         Những giai điệu tuyệt vời vẫn đang chờ đón bạn!</div>
                     <div>
-                        <input type="button" class="btn event-section_btn" onclick="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Đặt vé">
+                        <input type="button" class="btn event-section_btn" onclick="ShowMethodSupport()"  value="Đặt vé">
                     </div>
                 </div>
                 <div class="tour_event-img">
@@ -134,7 +134,7 @@
                     <div class="event-section_des--info">
                         Những giai điệu tuyệt vời vẫn đang chờ đón bạn!</div>
                     <div>
-                        <input type="button" class="btn event-section_btn" onclick="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Đặt vé">
+                        <input type="button" class="btn event-section_btn" onclick="ShowMethodSupport()"  value="Đặt vé">
                     </div>
                 </div>
                 <div class="tour_event-img">
@@ -157,7 +157,7 @@
                     <div class="event-section_des--info">
                         Những giai điệu tuyệt vời vẫn đang chờ đón bạn!</div>
                     <div>
-                        <input type="button" class="btn event-section_btn" onclick="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Đặt vé">
+                        <input type="button" class="btn event-section_btn" onclick="ShowMethodSupport()"  value="Đặt vé">
                     </div>
                 </div>
                 <div class="tour_event-img">
@@ -452,7 +452,7 @@
                         </p>
                     </div>
                     <div>
-                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
+                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()"  value="Liên hệ">
 
                     </div>
 
@@ -480,7 +480,7 @@
 
                         </p>
                     </div>
-                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
+                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()"  value="Liên hệ">
 
 
                 </div>
@@ -508,7 +508,7 @@
 
                         </p>
                     </div>
-                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
+                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()"  value="Liên hệ">
 
 
                 </div>
@@ -536,7 +536,7 @@
 
                         </p>
                     </div>
-                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
+                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()"  value="Liên hệ">
 
 
                 </div>
@@ -564,7 +564,7 @@
 
                         </p>
                     </div>
-                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
+                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()"  value="Liên hệ">
 
 
                 </div>
@@ -592,7 +592,7 @@
 
                         </p>
                     </div>
-                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
+                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()"  value="Liên hệ">
 
 
                 </div>
@@ -620,7 +620,7 @@
 
                         </p>
                     </div>
-                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
+                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()"  value="Liên hệ">
 
 
                 </div>
@@ -648,7 +648,7 @@
 
                         </p>
                     </div>
-                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
+                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()"  value="Liên hệ">
 
 
                 </div>
@@ -676,7 +676,7 @@
 
                         </p>
                     </div>
-                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
+                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()"  value="Liên hệ">
 
 
                 </div>
@@ -704,7 +704,7 @@
 
                         </p>
                     </div>
-                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()" onblur="HiddenMethodSupport()" value="Liên hệ">
+                    <input type="button" class="btn buy-product_btn" onclick="ShowMethodSupport()"  value="Liên hệ">
 
 
                 </div>
